--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -16,16 +16,16 @@
 
   <title>TS Client</title>
 
-  <link rel="icon" type="image/png" href="favicon.png?hash=2.0.5beta1">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=2.0.5beta1">
-  <link rel="stylesheet" href="css/client.css?hash=2.0.5beta1">
-  <link rel="manifest" href="ts2client.webmanifest?hash=2.0.5beta1">
+  <link rel="icon" type="image/png" href="favicon.png?hash=2.0.5 beta2">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=2.0.5 beta2">
+  <link rel="stylesheet" href="css/client.css?hash=2.0.5 beta2">
+  <link rel="manifest" href="ts2client.webmanifest?hash=2.0.5 beta2">
 
-  <script src="modules/corejs.min.js?hash=2.0.5beta1"></script>
-  <script src="modules/jquery.min.js?hash=2.0.5beta1" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=2.0.5beta1"></script>
-  <script src="modules/codemirror_module.min.js?hash=2.0.5beta1"></script>
-  <script src="modules/tern_module.min.js?hash=2.0.5beta1"></script>
+  <script src="modules/corejs.min.js?hash=2.0.5 beta2"></script>
+  <script src="modules/jquery.min.js?hash=2.0.5 beta2" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=2.0.5 beta2"></script>
+  <script src="modules/codemirror_module.min.js?hash=2.0.5 beta2"></script>
+  <script src="modules/tern_module.min.js?hash=2.0.5 beta2"></script>
   
   <script>
     if (window.visualViewport) {
@@ -237,6 +237,7 @@
         <ul>
           <li data-option-name="about">Versione</li>
           <li data-option-name="changelog">Registro modifiche</li>
+          <li><a href="https://github.com/temporasanguinis/TS2-Client/releases" target="_blank">Scarica eseguibile</a></li>
           <li type="separator"></li>
           <li id="appInstallMenu" data-option-name="installapp">Installa App</li>
           <li data-option-name="help">Aiuto (Help)</li>
