--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -237,6 +237,7 @@
         <ul>
           <li data-option-name="about">Versione</li>
           <li data-option-name="changelog">Registro modifiche</li>
+          <li><a href="https://github.com/temporasanguinis/TS2-Client/releases" target="_blank">Scarica eseguibile</a></li>
           <li type="separator"></li>
           <li id="appInstallMenu" data-option-name="installapp">Installa App</li>
           <li data-option-name="help">Aiuto (Help)</li>
