--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -16,16 +16,16 @@
 
   <title>TS Client</title>
 
-  <link rel="icon" type="image/png" href="favicon.png?hash=2.0.5 beta2">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=2.0.5 beta2">
-  <link rel="stylesheet" href="css/client.css?hash=2.0.5 beta2">
-  <link rel="manifest" href="ts2client.webmanifest?hash=2.0.5 beta2">
+  <link rel="icon" type="image/png" href="favicon.png?hash=v2.0.5 beta3">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=v2.0.5 beta3">
+  <link rel="stylesheet" href="css/client.css?hash=v2.0.5 beta3">
+  <link rel="manifest" href="ts2client.webmanifest?hash=v2.0.5 beta3">
 
-  <script src="modules/corejs.min.js?hash=2.0.5 beta2"></script>
-  <script src="modules/jquery.min.js?hash=2.0.5 beta2" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=2.0.5 beta2"></script>
-  <script src="modules/codemirror_module.min.js?hash=2.0.5 beta2"></script>
-  <script src="modules/tern_module.min.js?hash=2.0.5 beta2"></script>
+  <script src="modules/corejs.min.js?hash=v2.0.5 beta3"></script>
+  <script src="modules/jquery.min.js?hash=v2.0.5 beta3" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=v2.0.5 beta3"></script>
+  <script src="modules/codemirror_module.min.js?hash=v2.0.5 beta3"></script>
+  <script src="modules/tern_module.min.js?hash=v2.0.5 beta3"></script>
   
   <script>
     if (window.visualViewport) {
