--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -177,8 +177,10 @@
             <ul>
               <li data-option-name="enable-mxp" title="Il protocollo MXP permette al server di mandare variabili ed altro al client (preferibile abilitato)"><label for="menuBar-chkEnableMxp"><input id="menuBar-chkEnableMxp" type="checkbox" checked>MXP</label></li>
               <li data-option-name="enable-mxp-images" title="Se abilitato il mud mostrera immagini in certe room"><label for="menuBar-chkEnableMxpImages"><input id="menuBar-chkEnableMxpImages" type="checkbox" checked>Immagini MXP</label></li>
+              <li type="separator"></li>
               <li data-option-name="log-time"><label><input type="checkbox">Marca tempo</label></li>
-              <li data-option-name="debug-scripts"><label><input type="checkbox">Informazioni (debug)</label></li>
+              <li data-option-name="debug-scripts"><label><input type="checkbox">Debug script</label></li>
+              <li data-option-name="debug-variables"><label><input type="checkbox">Debug variabili</label></li>
               <li type="separator"></li>
               <li data-option-name="log-alerts">Avvertimenti log</li>
               <li type="separator"></li>
