--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -233,6 +233,8 @@
           <li data-option-name="layoutEditor">Disposizione schermo</li>
           <li type="separator"></li>
           <li data-option-name="mapper">Mapper</li>
+          <li type="separator"></li>
+          <li data-option-name="voice">Voice chat</li>
         </ul>
       </li>
       <li id="altro" class="focus" tabindex="404">Informazioni
@@ -335,5 +337,6 @@
     <h3 class="slideLeftRight">Caricamento in corso ...</h3>
   </div>
 </div>
+<div id="rtc" style="display:none;"></div>
 </body>
 </html>
