--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -337,6 +337,9 @@
     <h3 class="slideLeftRight">Caricamento in corso ...</h3>
   </div>
 </div>
-<div id="rtc" style="display:none;"></div>
+<div id="rtc" style="display:none;">
+  <div id="localElements" style="display:none;"></div>
+  <div id="peerElements" style="display:none;"></div>
+</div>
 </body>
 </html>
