--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -16,16 +16,16 @@
 
   <title>TS Client</title>
 
-  <link rel="icon" type="image/png" href="favicon.png?hash=v2.0.12">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=v2.0.12">
-  <link rel="stylesheet" href="css/client.css?hash=v2.0.12">
-  <link rel="manifest" href="ts2client.webmanifest?hash=v2.0.12">
+  <link rel="icon" type="image/png" href="favicon.png?hash=v2.0.13">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=v2.0.13">
+  <link rel="stylesheet" href="css/client.css?hash=v2.0.13">
+  <link rel="manifest" href="ts2client.webmanifest?hash=v2.0.13">
 
-  <script src="modules/corejs.min.js?hash=v2.0.12"></script>
-  <script src="modules/jquery.min.js?hash=v2.0.12" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=v2.0.12"></script>
-  <script src="modules/codemirror_module.min.js?hash=v2.0.12"></script>
-  <script src="modules/tern_module.min.js?hash=v2.0.12"></script>
+  <script src="modules/corejs.min.js?hash=v2.0.13"></script>
+  <script src="modules/jquery.min.js?hash=v2.0.13" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=v2.0.13"></script>
+  <script src="modules/codemirror_module.min.js?hash=v2.0.13"></script>
+  <script src="modules/tern_module.min.js?hash=v2.0.13"></script>
   
   <script>
     if (window.visualViewport) {
@@ -306,19 +306,19 @@
               <textarea autofocus tabindex="501" rows="1" id="cmdInput" aria-label="Barra comandi" autocomplete="off" autocorrect="off" spellcheck="false" autocapitalize="off" style="-webkit-user-modify: read-write-plaintext-only;"></textarea>
               <div class="chkCmdInputCmdStackCont">
                 <input id="chkCmdTriggers" type="checkbox" checked title="Triggers">
-                <label for="chkCmdTriggers" class="checker checkerTriggers" aria-live="polite" title="Abilita o disabilita Triggers (doppio click)"></label>
+                <label for="chkCmdTriggers" class="checker checkerTriggers" aria-live="polite" title="Abilita o disabilita Triggers"></label>
               </div>
               <div class="chkCmdInputCmdStackCont">
                 <input id="chkCmdAliases" type="checkbox" checked title="Aliases">
-                <label for="chkCmdAliases" class="checker checkerAliases" aria-live="assertive" title="Abilita o disabilita Alias (doppio click)"></label>
+                <label for="chkCmdAliases" class="checker checkerAliases" aria-live="assertive" title="Abilita o disabilita Alias"></label>
               </div>
               <div class="chkCmdInputCmdStackCont">
                 <input id="chkCmdStack" type="checkbox" checked>
-                <label for="chkCmdStack" class="checker checkerStack" aria-live="assertive" title="Comandi multipli con ; (doppio click)"></label>
+                <label for="chkCmdStack" class="checker checkerStack" aria-live="assertive" title="Comandi multipli con ;"></label>
               </div>
               <div class="chkCmdInputCmdStackCont">
                 <input id="chkCmdSplit" type="checkbox">
-                <label for="chkCmdSplit" class="checker checkerSplit" aria-live="assertive" title="Dividi scorrimento (doppio click)"></label>
+                <label for="chkCmdSplit" class="checker checkerSplit" aria-live="assertive" title="Dividi scorrimento"></label>
               </div>
             </div> 
           </div>
